# yadro-tatlin-test-task

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  basic_tape.h  file_tape.cpp  file_tape.h  main.cpp  tape_algorithm.cpp  tape_algorithm.h  tape_utils.cpp  tape_utils.h  vcpkg.json  vector_tape.cpp  vector_tape.h
tests/: tests.cpp
